--- a/stock_portfolio/my_app/templates/index.html
+++ b/stock_portfolio/my_app/templates/index.html
@@ -1,6 +1,114 @@
 <html>
-<head><title>Stock Portfolio</title></head>
+<head>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.1/css/mdb.min.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/animate.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+    <title>Stock Portfolio Manager</title>
+</head>
 <body>
-    Hello world
+    
+    
+    <div class="container-contact100">
+        <div class="contact100-map" id="google_map" data-map-x="40.722047" data-map-y="-73.986422" data-pin="images/icons/map-marker.png" data-scrollwhell="0" data-draggable="1"></div>
+        <div class="row">
+            
+            <div>
+                
+                <div class="calculate-side">
+                    <h1 class='lead-title'><center>Stock Portfolio</center></h1>
+                    <!-- Form  -->
+                    <form method="POST" action="report" class='calculate-side-form'>
+                        
+                        <div class="md-form ">
+                            <input type="number" id="amount" name="amount" class="form-control">
+                            <label for="amount">I want to invest ($)</label>
+                        </div>
+                        
+                        <div class="md-form pos-form">
+                            
+                            <div class="investment_choices_area clearfix">
+                                
+                                <label for="ic_1">
+                                    <img src="{% static 'images/1.png' %}" alt="">
+                                    <span>Ethical Investing</span>
+                                    <input type="checkbox" value="Ethical Investing" id="ic_1" name="investment_choices" class="form-control">
+                                </label>
+                                
+                                <label for="ic_2">
+                                    <img src="{% static 'images/2.png' %}" alt="">
+                                    <span>Growth Investing</span>
+                                    <input type="checkbox" value="Growth Investing" id="ic_2" name="investment_choices" class="form-control">
+                                </label>
+                                
+                                
+                                <label for="ic_3">
+                                    <img src="{% static 'images/3.png' %}" alt="">
+                                    <span>Index Investing</span>
+                                    <input type="checkbox" value="Index Investing" id="ic_3" name="investment_choices" class="form-control">
+                                </label>
+                                
+                                <label for="ic_4">
+                                    <img src="{% static 'images/4.png' %}" alt="">
+                                    <span>Quality Investing</span>
+                                    <input type="checkbox" value="Quality Investing" id="ic_4" name="investment_choices" class="form-control">
+                                </label>
+                                <label for="ic_5">
+                                    <img src="{% static 'images/5.png' %}" alt="">
+                                    <span>Value Investing</span>
+                                    <input type="checkbox" value="Value Investing" id="ic_5" name="investment_choices" class="form-control">
+                                </label>
+                            </div>
+                            
+                        </div>
+                        
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-info submit_btn">Generate Report</button>
+                        </div>
+                    </form>
+                    <!-- End of Form  -->
+                    
+                </div>
+                
+            </div>
+            
+            
+            
+        </div>
+    </div>
+    
+    
+    <!-- Modal for form error checking. -->
+    <div class="modal fade" id="formErrorModal" tabindex="-1" role="dialog" aria-labelledby="formErrorModal" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="formErrorModal">We have a problem !</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body"></div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    
+    <!-- jQuery first, then Tether, then Bootstrap JS. -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.1/js/mdb.min.js"></script>
+    
+    <script src="{% static 'js/main.js' %}"></script>
+    
+    
+    
+    
 </body>
 </html>
