--- a/stock_portfolio/my_app/static/css/main.css
+++ b/stock_portfolio/my_app/static/css/main.css
@@ -48,9 +48,13 @@
     
     top: -120px;
     
-    left;0margin:0padding:5px 10pxborder-
+    left:0;
     
-    radius:4px;
+    margin:0;
+    
+    padding:5px 10px;
+    
+    border-radius:4px;
     
     left: 0;
     
@@ -89,7 +93,7 @@
 
 .pos-form > label  {position:relative;top: auto;left: auto;display: block;padding-top: 21px;}
 
-.md-form .investment_choices_area input {position:absolute;/* visibility: hidden; */opacity: 0;}
+.md-form .investment_choices_area input {position:absolute;opacity: 0;}
 
 .md-form .investment_choices_area input:checked  {opacity:1;box-shadow:none;outline:none;appearance:none;-webkit-appearance:none;margin: 0 auto;left: 50%;width: 100px;bottom: -1px;margin-left: -50px;border-color: #B900FF;}
 
@@ -180,11 +184,25 @@
 }
 
 .submit_btn:hover {
-    border:0px solid #26759E;
     background-color: #9400CC; background-image: -webkit-gradient(linear, left top, left bottom, from(#9400CC), to(#9400CC));
     background-image: -webkit-linear-gradient(top, #9400CC, #9400CC);
     background-image: -moz-linear-gradient(top, #9400CC, #9400CC);
     background-image: -ms-linear-gradient(top, #9400CC, #9400CC);
     background-image: -o-linear-gradient(top, #9400CC, #9400CC);
     background-image: linear-gradient(to bottom, #9400CC, #9400CC);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#9400CC, endColorstr=#9400CC);
+}
+
+span.bigcheck-target {
+    font-family: FontAwesome; /* use an icon font for the checkbox */    
+}
+input[type='checkbox'].bigcheck {     
+    position: relative;
+    left: -999em; /* hide the real checkbox */
+}
+
+input[type='checkbox'].bigcheck + span.bigcheck-target:after {
+    content: "\f096"; /* In fontawesome, is an open square (fa-square-o) */
+}
+input[type='checkbox'].bigcheck:checked + span.bigcheck-target:after {
+    content: "\f046"; /* fontawesome checked box (fa-check-square-o) */
 }
