--- a/stock_portfolio/my_app/templates/details.html
+++ b/stock_portfolio/my_app/templates/details.html
@@ -13,49 +13,46 @@
     
     
     <div class="container-contact100">
-        <div class="contact100-map" id="google_map" data-map-x="40.722047" data-map-y="-73.986422" data-pin="images/icons/map-marker.png" data-scrollwhell="0" data-draggable="1"></div>
         <div class="row">
             <div class="page-content">
                 
                 <div class="content">
                     
-                    <div class="col-12"> 
+                    <div class="col-12">
                         
-                        <div class="row">
-                            <div class="col-12">
-                                
-                                {% if many_selection == False %}
-                                <h1 class='lead-title'>{{ types.0 }}</h1>
-                                <table class="table table-striped">
-                                    <thead>
-                                        <tr>
-                                            <th>Symbol</th>
-                                            <th>Company</th>
-                                            <th>Stock Value</th>
-                                            <th>Invested Amount</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        {% for stock_name,stock_closing,stock_symbol,stock_value in whole_data %}
-                                        <tr>
-                                            <td>
-                                                {{ stock_symbol }}
-                                            </td>
-                                            <td>
-                                                {{ stock_name}}
-                                            </td>
-                                            <td>
-                                                ${{ stock_closing }}
-                                            </td>
-                                            <td>
-                                                ${{ stock_value }}
-                                            </td>
-                                        </tr>
-                                        {% endfor %}
-                                    </tbody>
-                                </table>
-                                {% else %}
-                                
+                        {% if many_selection == False %}
+                        <h1 class='lead-title'>{{ types.0 }}</h1>
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Symbol</th>
+                                    <th>Company</th>
+                                    <th>Stock Value</th>
+                                    <th>Invested Amount</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for stock_name,stock_closing,stock_symbol,stock_value in whole_data %}
+                                <tr>
+                                    <td>
+                                        {{ stock_symbol }}
+                                    </td>
+                                    <td>
+                                        {{ stock_name}}
+                                    </td>
+                                    <td>
+                                        ${{ stock_closing }}
+                                    </td>
+                                    <td>
+                                        ${{ stock_value }}
+                                    </td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                        {% else %}
+                        <div class="container_graph">
+                            <div class="item">
                                 <h1 class='lead-title'>{{ types.0 }}</h1>
                                 
                                 <table class="table table-striped">
@@ -90,12 +87,9 @@
                                         
                                     </tbody>
                                 </table>
-                                
-                                
+                            </div>
+                            <div class="item">
                                 <h1 class='lead-title'>{{ types.1 }}</h1>
-                                
-                                
-                                
                                 <table class="table table-striped">
                                     <thead>
                                         <tr>
@@ -128,26 +122,26 @@
                                         
                                     </tbody>
                                 </table>
-                                {% endif %}
                             </div>
                         </div>
-                        
-                    </div> 
+                        {% endif %}
+                    </div>
                     
                 </div>
             </div>
         </div>
         
         
-        <div>
+        
+    </div>
+    
+    <div class="container_graph">
             {% for graph in graphs %}
-            <div style="width:600;height:500">
+            <div class="item">
                 {{ graph|safe }}
             </div>
             {% endfor %}
         </div>
-    </div>
-    
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
